---------------------------------------------------------------------------------------------------
Version: 999.999.999
Date: 9999-99-99
  Changes:
  Features:
  Bugfixes:
---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 2022-08-03
  Features:
    - Unapproved underground belts and their non-unapproved counterparts can now be rotated together, with some caveats in logic.
  Bugfixes:
    - Fixed underground belts pairing-up (for rotation/direction purposes) with orthogonal counterparts.
    - Fixed underground belt not pairing-up correctly with existing unapproved underground belts.
    - Fixed (hard) crash when undoing changes after the deconstruction planner has been used against area with tiles.
    - Fixed tiles getting deconstruction orders when using deconstruction planner.
    - Fixed accidental approvals when drag-building "gappable" entities (underground belts an pipes, electric poles) over unapproved ghosts.
    - Fixed placeholders staying behind when player is building on top of unapproved ghosts if replacement entity does not have the same center as the unapproved ghost.
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 2022-07-31
  Features:
    - Addition of /cp_cleanup console command that can be used to clean-up some inconsistencies in the savegame related to construction planner. Make sure to backup the savegame before using.
  Bugfixes:
    - Fixed unapproved underground belts reversing when connecting to existing (approved/unapproved) underground belts.
    - Fixed deconstruction planner handling to avoid marking wrong entities for deconstruction (cliffs, fish, filtered entities if deconstruction planne is used from inventory).
    - Fixed deconstruction planner handling to avoid creating uncancelable deconstruction orders for the unapproved ghost force.